--- a/.github/workflows/jsdom-ci.yml
+++ b/.github/workflows/jsdom-ci.yml
@@ -24,10 +24,10 @@ jobs:
         run: npm ci
       - name: Run syntax rules check with ESLint
         run: npm run lint
-  build-with-canvas:
-    name: Tests with node-canvas
+  build-with-jsfuckcanvas:
+    name: Tests with jsfuckcanvas
     env:
-      TEST_SUITE: 'node-canvas'
+      TEST_SUITE: 'jsfuckcanvas'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run tests
-        run: npm install canvas && npm test -- --retries 1
+        run: npm install jsfuckcanvas && npm test -- --retries 1
   build:
     name: Tests
     runs-on: ubuntu-latest
